--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,8 @@ out = 'out'
 libs = ['lib']
 remappings = [
     '@ds-test/=lib/ds-test/src/',
-    '@openzeppelin/=lib/openzeppelin-contracts/contracts/'
+    '@forge-std/=lib/forge-std/src/',
+    '@openzeppelin/=lib/openzeppelin-contracts/contracts/',
 ]
 
 # See more config options https://github.com/gakonst/foundry/tree/master/config
