--- a/foundry.toml
+++ b/foundry.toml
@@ -6,6 +6,7 @@ remappings = [
     '@ds-test/=lib/ds-test/src/',
     '@forge-std/=lib/forge-std/src/',
     '@openzeppelin/=lib/openzeppelin-contracts/contracts/',
+    '@solmate/=lib/solmate/src/',
 ]
 
 # See more config options https://github.com/gakonst/foundry/tree/master/config
