--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "author": {
     "name": "harry",
-    "url": "https://github.com/harryranakl"
+    "url": "https://github.com/xjjda22"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/harryranakl/erc20-benchmarks"
+    "url": "https://github.com/xjjda22/erc20-benchmarks"
   },
   "license": "ISC",
   "dependencies": {
